--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -61,6 +61,7 @@
             {% endfor %}
           </tbody>
         </table>
+        <div class="contyyyyy">
         <span class="text-area-sections">
           <div class="text-area-container">
             <div class="text-area-container-menu">
@@ -75,8 +76,8 @@
           </div>
           <div class="checkout-section">
             <button type="submit" name="checkout-button" class="checkout-button">Checkout</button>
-          
-        </div>
+          </div>
+              </div>
       </form>
     </div>
   </div>
