--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -61,6 +61,7 @@
             {% endfor %}
           </tbody>
         </table>
+        <hr>
         <div class="contyyyyy">
         {% comment %} <span class="text-area-sections">
           <div class="text-area-container">
@@ -71,9 +72,11 @@
           </div>
         </span> {% endcomment %}
           <div class="subtotal-area-section">
-            <h3 class="subtottl">SubTotal:{{ cart.total_price }}</h3>
-            <button type="submit" name="update" class="update-button">Update</button>
-          </div>
+            <h3 class="subtottl">SubTotal:- {{ cart.total_price }}</h3>
+            </div>
+            <div class="updte">
+              <button type="submit" name="update" class="update-button">Update</button>
+            </div>
           <div class="checkout-section">
             <button type="submit" name="checkout-button" class="checkout-button">Checkout</button>
           </div>
