--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -9,6 +9,7 @@
       >
     {% endif %}
     <a href="{{ product.url }}">{{ product.title }}</a>
+    {% comment %} <span> {{ product.vendor }}</span> {% endcomment %}
     <p>{{ product.price | money }}</p>
     {% else %}
     <p> no product available</p>
