--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,3 +1,5 @@
+<div class="collection-page">
+<div class="collection-section">
 {% paginate collection.products by 4 %}
   {% for product in collection.products %}
     {% if product.featured_image %}
@@ -9,10 +11,12 @@
       >
     {% endif %}
     <a href="{{ product.url }}">{{ product.title }}</a>
-    {% comment %} <span> {{ product.vendor }}</span> {% endcomment %}
+    
     <p>{{ product.price | money }}</p>
-    {% else %}
-    <p> no product available</p>
+  {% else %}
+    <p>no product available</p>
   {% endfor %}
   {% comment %} {% render 'pagination' ,pagination:paginate %} {% endcomment %}
 {% endpaginate %}
+</div>
+</div>
