--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -3,6 +3,21 @@
  <div class="collection-container">
 {% paginate collection.products by 4 %}
   {% for product in collection.products %}
+<div class="collection_menu">
+<div class="collection_menu_container">
+    {% if product.featured_image %}
+        <img
+          src="{{ product.featured_image | img_url:'medium'}}"
+          alt="{{ product.featured_image.alt }}"
+          width=""
+          height=" "
+        >
+      {% endif %}
+      <a href="{{ product.url }}">{{ product.title }}</a>
+      
+      <p>{{ product.price | money }}</p>
+</div>
+</div>
     {% if product.featured_image %}
       <img
         src="{{ product.featured_image | img_url:'medium'}}"
