--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -951,6 +951,8 @@ tr{
 }
 
 .collection_menu img {
+  padding-left: 86px;
+  text-align: center;
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
