D:\shopify-Theme-Devlopment\mydown\sections\template-collection.liquid

--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -4,7 +4,7 @@
 {% paginate collection.products by 4 %}
   {% for product in collection.products %}
 <div class="collection_menu">
-    <div class="collection_menu_container">
+    {% comment %} <div class="collection_menu_container">
         {% if product.featured_image %}
             <img
               src="{{ product.featured_image | img_url:'medium'}}"
@@ -16,7 +16,8 @@
           <a href="{{ product.url }}">{{ product.title }}</a>
           
           <p>{{ product.price | money }}</p>
-    </div>
+    </div> {% endcomment %}
+    {% render 'product-cart' product_product: product %} 
 </div>
   
   {% else %}
