--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,9 +1,11 @@
 <div class="collection-page">
 <div class="collection-section">
  <div class="collection-container">
-    <h1>{{ collection.title }}</h1>
+    
 {% paginate collection.products by 4 %}
-
+<div class="collectionName">
+    <h1>{{ collection.title }}</h1>
+    </div>
   {% for product in collection.products %}
 <div class="collection_menu">
     <div class="collection_menu_container">
