--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -970,7 +970,15 @@ tr{
   font-size: 18px;
   color: #000;
 }
-
+.collectionName{
+  font-weight: 500;
+    font-size: 30px;
+    padding: 40px;
+    height: 24px;
+    /* background-color: blue; */
+    /* margin-bottom: 42px; */
+    text-align: center;
+}
 
 /* Responsive Design for Devices with max-width: 550px */
 @media (max-width: 550px) {
