--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,3 +1,6 @@
+<div class="collectionName">
+    <h1>myCollection</h1>
+    </div>
 <div class="collection-page">
 <div class="collection-section">
  <div class="collection-container">
