--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,5 +1,5 @@
 <div class="collectionName">
-  <h1>myCollection</h1>
+  <h1>{{ product.collections }}</h1>
 </div>
 <div class="collection-page">
   <div class="collection-section">
