--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,5 +1,7 @@
 <div class="collectionName">
   <h1>{{ collection.title}}</h1>
+  <p>{{ collection.products_count }} products</p> <!-- Display the product count here -->
+
 </div>
 <div class="collection-page">
   <div class="collection-section">
