--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -7,7 +7,7 @@
 <div class="collection-page">
   <div class="collection-section">
     <div class="collection-container">
-      {% paginate collection.products by 20 %}
+      {% paginate collection.products by section.settings.number_of_product_per_page %}
         {% for product in collection.products %}
           <div class="collection_menu">
             {% comment %} <div class="collection_menu_container">
@@ -23,7 +23,7 @@
               <p>{{ product.price | money }}</p>
             </div> {% endcomment %}
 
-            {% render 'product-cart' ,product_product:product%}
+            {% render 'product-cart' ,product:product%}
           </div>
         {% else %}
           <p>no product available</p>
@@ -33,3 +33,17 @@
     </div>
   </div>
 </div>
+
+{% schema %}
+{
+  "name": "template-collection",
+  "settings": [
+    {
+      "type": "number",
+      "id": "number_of_product_per_page",
+      "default": 3,
+      "label": "Number of products per page"
+    }
+  ]
+}
+{% endschema %}
