--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,3 +1,7 @@
+<div>
+<h1>{{ section.settings.title }}</h1>
+</div>
+
 {% for product in section.settings.featured_collection.products %}
     {% render 'product-cart' ,product:product%}
 {% endfor %}
