--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -8,7 +8,7 @@
 
 {% schema %}
 {
-  "name": "featured-collection",
+  "name": "Featured Collection",
   "settings": [
     {
       "type": "text",
@@ -20,7 +20,8 @@
       "type": "collection",
       "id": "featured_collection",
       "label": "collection"
-    }
+    },
+    
   ]
 }
 {% endschema %}
