--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,26 +1,24 @@
-{% comment %} <div class="title_">
-<h1>{{ section.settings.title }}</h1>
-</div>
-{% for product in section.settings.featured_collection.products %}
-    {% render 'product-cart' ,product:product%}
-{% endfor %} {% endcomment %}
-
+{% comment %}
+  <div class="title_">
+  <h1>{{ section.settings.title }}</h1>
+  </div>
+  {% for product in section.settings.featured_collection.products %}
+      {% render 'product-cart' ,product:product%}
+  {% endfor %}
+{% endcomment %}
 
 <div class="featured-collection-section">
-    <div class="title_">
-      <h1>{{ section.settings.title }}</h1>
-    </div>
-    <div class="products-grid">
-      {% for product in section.settings.featured_collection.products %}
-        <div class="product-item">
-          {% render 'product-cart', product: product %}
-        </div>
-      {% endfor %}
-    </div>
+  <div class="title_">
+    <h1>{{ section.settings.title }}</h1>
   </div>
-  
-
-
+  <div class="products-grid">
+    {% for product in section.settings.featured_collection.products limit: section.settings.number_of_product_to_show %}
+      <div class="product-item">
+        {% render 'product-cart', product: product %}
+      </div>
+    {% endfor %}
+  </div>
+</div>
 
 {% schema %}
 {
@@ -37,6 +35,14 @@
       "id": "featured_collection",
       "label": "Collection"
     },
+    {
+      "type": "range",
+      "id": "number_of_product_to_show",
+      "max": 12,
+      "min": 6,
+      "default": 6,
+      "label": "Number of product to show"
+    }
   ]
 }
 {% endschema %}
