--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -15,7 +15,14 @@
     {% for product in section.settings.featured_collection.products limit: section.settings.number_of_product_to_show %}
       <div class="product-item">
         {% render 'product-cart', product: product %}
+       
       </div>
+
+      {% else %}
+       {% for item in (1..4)  %}
+        {% render 'product-cart-placeholder' %}
+        
+       {% endfor %}
     {% endfor %}
   </div>
 </div>
@@ -42,6 +49,11 @@
       "min": 2,
       "default": 2,
       "label": "Number of product to show"
+    }
+  ],
+  "presets": [
+    {
+       "name":"Featured Collection"
     }
   ]
 }
