--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -1,5 +1,6 @@
 {% paginate collection.products by 2 %}
 <h1>{{ collection.title }}</h1>
+heeee
 {% for product in collection.products %}
 <div>
 <a href="{{ product.url | within: collection }}">{{ product.title }}</a>
