--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,6 +1,6 @@
 
 
-{% comment %} <div class="relative bg-white">
+ <div class="relative bg-white">
   <div class="max-w-screen-xl mx-auto px-4">
     <div class="flex justify-between items-center py-4">
       <!-- Store Logo and Title -->
@@ -81,99 +81,7 @@
       </div>
     </div>
   </div>
-</div> {% endcomment %}
-
-
-<div class="header-container">
-  <div class="max-w-screen-xl mx-auto px-4">
-    <div class="flex justify-between items-center py-4">
-      
-      <!-- Store Logo and Title -->
-      <div class="store_title">
-        <h1 class="title text-2xl font-bold text-white">
-          {{ shop.name }}
-        </h1>
-      </div>
-
-      <!-- Hamburger Menu for Mobile -->
-      <div class="hamburger-menu sm:hidden">
-        <button class="hamburger-button text-white" onclick="toggleMenu()">
-          {% render 'icon-menu' %}
-        </button>
-      </div>
-
-      <!-- Navigation Menu -->
-      <div id="navMenu" class="hidden sm:flex sm:space-x-4 nav-menu">
-        {% for link in linklists[section.settings.menu].links %}
-          {% if link.links != blank %}
-            <div class="relative">
-              <button class="inline-flex items-center dropdown-button text-white">
-                {{ link.title }}
-                <span class="dropdown-icon">
-                  {% render 'icon-dropdown' %}
-                </span>
-              </button>
-              <div class="child-menu-section hidden absolute bg-white shadow-lg mt-2">
-                <div class="child-section p-4">
-                  <div class="child-menu">
-                    {% for childlink in link.links %}
-                      <a href="{{ childlink.url }}" class="child-link block p-2 hover:bg-gray-100 text-gray-900">
-                        <div class="class-m">
-                          <p class="p-m">
-                            {{ childlink.title }}
-                          </p>
-                        </div>
-                      </a>
-                    {% endfor %}
-                  </div>
-                </div>
-              </div>
-            </div>
-          {% else %}
-            <a href="{{ link.url }}" class="text-white hover:text-gray-400">
-              {{ link.title }}
-            </a>
-          {% endif %}
-        {% endfor %}
-      </div>
-
-      <!-- Cart Button / Account Links -->
-      <div class="hidden sm:flex space-x-4">
-        <a class="whitespace-nowrap text-base text-white" href="{{ routes.cart_url }}">
-          {% render 'icon-shopping-bag' %}
-        </a>
-        {% if shop.customer_accounts_enabled %}
-          {% if customer %}
-            <a href="{{ routes.accounts_url }}" class="text-base text-white hover:text-gray-400">Account</a>
-            {{
-              'logout'
-              | customer_logout_link
-              | replace: '<a', '<a class="text-base text-white hover:text-gray-400"'
-            }}
-          {% else %}
-            {{
-              'login'
-              | customer_login_link
-              | replace: '<a', '<a class="text-base text-white hover:text-gray-400"'
-            }}
-            {{
-              'Register'
-              | customer_register_link
-              | replace: '<a', '<a class="text-base text-white hover:text-gray-400"'
-            }}
-          {% endif %}
-        {% endif %}
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-  function toggleMenu() {
-    const navMenu = document.getElementById('navMenu');
-    navMenu.classList.toggle('hidden');
-  }
-</script>
+</div> 
 
 
 
