--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -35,7 +35,7 @@
                       <a href="{{ childlink.url }}" class="child-link block p-2 hover:bg-gray-100">
                         <div class="class-m">
                           <p class="p-m">
-                            {{ childlink.title }}
+                            {% comment %} {{ childlink.title }} {% endcomment %}
                           </p>
                         </div>
                       </a>
