--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,7 +1,7 @@
 <p>{{ collection.products_count }} products</p> <!-- Display the product count here -->
 <div class="collectionName">
   <h1>{{ collection.title}}</h1>
- 
+ {{ collections.title }}
 
 </div>
 <div class="collection-page">
