--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,9 +1,7 @@
-<p>{{ collection.products_count }} products</p> <!-- Display the product count here -->
+{% comment %} <p>{{ collection.products_count }} products</p> <!-- Display the product count here --> {% endcomment %}
 <div class="collectionName">
   <h1>{{ collection.title}}</h1>
- {{ collections.title }}
-
-</div>
+ </div>
 <div class="collection-page">
   <div class="collection-section">
     <div class="collection-container">
