--- a/sections/template-page.liquid
+++ b/sections/template-page.liquid
@@ -1,2 +1,2 @@
-<h1>{{ page.title }}</h1>
-<div>{{ page.content }}</div>
+<h1 class="page-Ttile">{{ page.title }}</h1>
+<div class="page_Content">{{ page.content }}</div>
