--- a/sections/template-page.liquid
+++ b/sections/template-page.liquid
@@ -1,2 +1,8 @@
+<div class="aboutUS_page">
+<div class="title-contaner">
 <h1 class="page-Ttile">{{ page.title }}</h1>
+</div>
+<div class="paragrepf">
 <div class="page_Content">{{ page.content }}</div>
+</div>
+</div>
