--- a/sections/template-page.liquid
+++ b/sections/template-page.liquid
@@ -1,8 +1,14 @@
-<div class="aboutUS_page">
-<div class="title-contaner">
-<h1 class="page-Ttile">{{ page.title }}</h1>
-</div>
-<div class="paragrepf">
-<div class="page_Content">{{ page.content }}</div>
-</div>
+<!-- Cart Page Template -->
+
+<div class="cart-page">
+    <!-- Existing cart page content -->
+    
+    <div class="aboutUS_section">
+        <div class="title-contaner">
+            <h1 class="page-Ttile">{{ page.title }}</h1>
+        </div>
+        <div class="paragrepf">
+            <div class="page_Content">{{ page.content }}</div>
+        </div>
+    </div>
 </div>
