--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -1,5 +1,19 @@
  <div class="flex flex-col items-center my-8">
-    {% form 'contact' %} {% endform %}
+    {% form 'contact' %}
+        <div class="form__contaer">
+   <label for="contact_Name"> Name </label> 
+   <input type="text" name="contact[name]" id="contact_name"> 
+   <label for="contact_Email"> Email </label> 
+   <input type="text" name="contact[email]" id="contact_email"> 
+
+   <label for="contact_message"> Message </label> 
+   <textarea  name="contact[body]" id="contact_message"> </textarea>
+   <input type ="button" value="submit_message">
+
+</div>
+
+    
+    {% endform %}
      </div>
     
      {% schema %}
