--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -1,20 +1,25 @@
- <div class="flex flex-col items-center my-8">
+<div class="flex flex-col items-center my-8">
     {% form 'contact' %}
-        <div class="form__contaer">
-   <label for="contact_Name"> Name </label> 
-   <input type="text" name="contact[name]" id="contact_name"> 
-   <label for="contact_Email"> Email </label> 
-   <input type="text" name="contact[email]" id="contact_email"> 
-
-   <label for="contact_message"> Message </label> 
-   <textarea  name="contact[body]" id="contact_message"> </textarea>
-   <input type ="button" value="submit_message">
-
+        <div class="form__container">
+            <div class="form__group">
+                <label for="contact_name" class="form__label">Name</label>
+                <input type="text" name="contact[name]" id="contact_name" class="form__input">
+            </div>
+            <div class="form__group">
+                <label for="contact_email" class="form__label">Email</label>
+                <input type="text" name="contact[email]" id="contact_email" class="form__input">
+            </div>
+            <div class="form__group">
+                <label for="contact_message" class="form__label">Message</label>
+                <textarea name="contact[body]" id="contact_message" class="form__textarea"></textarea>
+            </div>
+            <div class="form__group">
+                <input type="submit" value="Submit Message" class="form__submit">
+            </div>
+        </div>
+    {% endform %}
 </div>
 
-    
-    {% endform %}
-     </div>
     
      {% schema %}
      {
